Add JVM tuning parameters to Dockerfile