@@ -6,4 +6,16 @@ COPY target/spring-petclinic-*.jar app.jar
 
 EXPOSE 8080
 
-ENTRYPOINT ["java", "-jar", "app.jar"]
+ENTRYPOINT ["java", \
+  "-Xms256m", \
+  "-Xmx512m", \
+  "-XX:NewRatio=2", \
+  "-XX:+UseG1GC", \
+  "-XX:MaxGCPauseMillis=200", \
+  "-XX:+HeapDumpOnOutOfMemoryError", \
+  "-XX:HeapDumpPath=/app/dumps/", \
+  "-XX:+PrintGCDetails", \
+  "-Xlog:gc*:file=/app/logs/gc.log:time,uptime,level,tags:filecount=5,filesize=10m", \
+  "-Dfile.encoding=UTF-8", \
+  "-Duser.timezone=Asia/Shanghai", \
+  "-jar", "app.jar"]
